- API convenience changes (#79)[https://github.com/tzaeschke/ode4j/pull/79]
  - DBody.addLinearVelocity()
  - DVector3C.reAdd()
  - DQuaternion.ZERO and DQuaternion.IDENTITY
  - Additional DQuaternionC API methods: isEq(), length(), lengthSquared(), ...
  - DQuaternion.toEuler() and fromEuler()
  - DQUaternion.invert() inverts a quaternion


0.4.0
=====
- Fixed javadoc to compile without warnings
- Java 9 compatibility automatically detected and used with Maven profiles 
- Changed to Java 9 (output still Java 7) and modularization (io7m)
- Changed to Java 7 and updated some maven dependencies
- Implemented/migrated multi-threading for the stepper (Pjotr)
- SAP-Space optimization: Avoid collision detection for immobile bodies (Pjotr)
- New BVH tree for better scalability with many bodies, ported from the Turbulenz Engine (Pjotr)
- Some fixes, including new random reordering in quickstep, see PR #67, #68 (Pjotr)


0.3.1
=====
- Announcement: This will be the last release build with Java 6! 
- Convex vs trimesh collision improvement for concave trimeshes, PR #51 (Piotr)
- Quickstep improvements, also fixes issue with DemoFeedback, PR #50 (Piotr)
- Added more stable cylinder stacking, PR #47 (Piotr)
- Deprecated DxSpace.getGeom(i) to fix compilation failure (TZ)
- Ported libccd updates, PR #45 (Piotr)
- Added new SAP space, PR #43 (Piotr)
- Fixes on SAP space, PR #42 (Piotr)
- Fixes on removing geoms from space, PR #41 (Piotr)
- Added support for convex-trimesh collision (Piotr)
- Fixed scaling of tacc in quickstep (issue #38, Eduard Nicodei)
- Fixed Common.__ASSERT methods to act correctly if parameter is '0' or 'false', see issue #32
- Removed unnecessary Common.__ASSERT calls if NPE would trivially be thrown by code below, see #32 
- Fixed mode checking in dJointSetTransmissionAxis2(), see issue #33
- Test and fix for issue #31  (NPE in ragdoll)
- Added support for heightfiels with holes (DxTrimeshHeightField)
- Added support for the slf4j loggin API (TZ)